Sexy up a little bit

--- a/locales/en.properties
+++ b/locales/en.properties
@@ -13,9 +13,9 @@ root-title = Carbon Fox
 %generate = Generate
 %get-started = Get Started!
 %login-title = Carbon Fox
-%placeholder-password = (password)
-%placeholder-username = (username)
-%placeholder-website = (website)
+%placeholder-password = password
+%placeholder-username = username
+%placeholder-website = website
 %save = Save
 %saved = Saved!
 %simple-pin = PIN too simple
