Initial spanish translation. Needs to be checked over

--- a/locales/es.properties
+++ b/locales/es.properties
@@ -1,2 +1,26 @@
-[es]
 root-title = Carbon Fox
+%already-exists = Ya existe
+%backspace = Retroceso
+%bad-pin = PIN incorrecta
+%cancel = Cancelar
+%checking-pin = Comprobar su PIN...
+%delete = Borrar
+%deleted = Eliminados!
+%edit-title = Editar Contraseña
+%enter-pin = Escriba su PIN
+%error = Error
+%error-deleting = Error al eliminar
+%generate = Generar
+%get-started = Empieza!
+%login-title = Carbon Fox
+%placeholder-password = tu contraseña
+%placeholder-username = su nombre de usuario
+%placeholder-website = el sitio web
+%save = Guardar
+%saved = Guardado!
+%simple-pin = PIN demasiado simple
+%view-title = Carbon Fox
+%welcome-para-early = Se trata de un prototipo en fase inicial, pero le animamos a probarlo!
+%welcome-para-setup-pin = Primero va a configurar un PIN para proteger sus contraseñas contra ladrones casuales.
+%welcome-title = Bienvenida
+%welcome-welcome = Bienvenido a Carbon Fox!
