Allow changing PIN

--- a/locales/en.properties
+++ b/locales/en.properties
@@ -1,9 +1,12 @@
 root-title = Carbon Fox
+%about = About
 %already-exists = Already exists
 %backspace = Bkspace
 %bad-pin = Bad PIN
 %cancel = Cancel
 %checking-pin = Checking PIN...
+%change-pin = Change PIN
+%change-pin-confirm = Are you sure you want to change your PIN? You cannot reverse this.
 %delete = Delete
 %deleted = Deleted!
 %edit-title = Password
@@ -24,3 +27,4 @@ root-title = Carbon Fox
 %welcome-para-setup-pin = First you will set up a PIN to secure your passwords against casual thieves.
 %welcome-title = Welcome
 %welcome-welcome = Welcome to Carbon Fox!
+%pin-changed = PIN Changed
