Fix About page, and discard Symbol dependency

--- a/locales/en.properties
+++ b/locales/en.properties
@@ -28,3 +28,4 @@ root-title = Carbon Fox
 %welcome-title = Welcome
 %welcome-welcome = Welcome to Carbon Fox!
 %pin-changed = PIN Changed
+%back = Back
